<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GetDirectEd</string>
    
    <string-array name="choices">
        <item >Favourites</item>
        <item >Activities</item>
        <item >Facilities</item>
        <item >Events</item>
        <item >Right Now</item>
    </string-array>
    <string name="activities">Activities</string>
    <string name="facilities">Facilities</string>
    <string name="event">Event</string>
    <string name="r_now">Right Now</string>
    <string name="favourites">Favourites</string>
    <string name="default_value">Default</string>
    <string name="home">Return to Main Page</string>

</resources>