<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:textSize="20sp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gdbackground"  >

    <Button
        android:id="@+id/button1"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/facilities"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button3"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button4"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/r_now"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button5"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites"
        android:gravity="center_horizontal" />

</LinearLayout>